- Corrected? 'What's new textarea' BP keeps textarea short using 'height: 20px'
- Removed overflow: hidden for 'what's-new-textarea' replaced with 'clearfix' n.b can be reverted
- Added 'clear: both' to '.activity-entry', '.activity-comment' n.b can be reverted

05/12/11 tam
- Merged CSS as per discussion
- Added in fix for favourites
- First wave of icons which only show on hover for now until get feedback
- Changed some bold fonts and font sizes to give the activity posts bit more impact

06/12/11 tam
- Removed 96% on viewport until we set one width later for all - better all have it than just one
- Added hover over colour for activity li
- Removed margin on bottom of avatars in li
- Removed sections in sections on the front page - a section shouldn't be in another
- Removed outside html on front page - each should be in each loop as discussed so can have better layout control
- Removed 'status' on footer and sidebar calls as it won't have child themes we don't need to use footer-status and such - no plans for different footers or headers like that in design

06/12/11 tam
- Removed welcome message lets use just activity
- Redirected to index.php for activity - willing to work out later just getting done
- Added tails to speech

08/12/11 hugo
- First pass at adding custom nav
- Added back custom nav markup with do actions
- functions.php provides an add_action function to build user profile nav elements
- Added basic styles for dropdowns - need third level positioning sorting out
- BP buddybar removed in functions.php
- Not sure what happens with wp-admin-bar?
- This is work in progress requiring further attention

08/12/11 tam
- Changed front to be sign in / sign up directs to the registration if on (must have if on check wasn't there previously)
- Must run WP 3.3 and BuddyPress 1.6 trunk to see this all work
- Fixed up footer widgets and put back in default naming to get done for now